test_cases/pass/p33.lxr
SCRIPT AREA
START SCRIPT
DECLARE INT x, y
x=8
y=-x+3
PRINT: y
END SCRIPT
