test_cases/fail/f12.lxr
START SCRIPT
DECLARE INT x
x=5
END SCRIPT
